syntax = "proto3";
package types;

option go_package = "github.com/sisu-network/sisu/x/sisu/types";

// Note: all new fields in this proto MUST be included in SerializeWithoutSigner in the go file.
message TransferOutsMsg {
  string signer = 1;
  TransferOuts data = 2;
}

message TransferOuts {
  string chain = 1;
  int64 height = 2;
  string hash = 3;

  repeated TransferOut requests = 4;
}

message TransferOut {
  string sender = 1;
  string to_chain = 2;
  string token = 3;
  string recipient = 4;
  string amount = 5;
  string hash = 6;
}
